# flexclang

./: .gitignore  CMakeLists.txt  README.md
.claude/agents/: clang-system-designer.md  hip-kernel-reviewer.md
docs/superpowers/plans/: 2026-04-21-flexclang-driver-layer.md  2026-04-21-flexclang-implementation.md
docs/superpowers/specs/: 2026-04-21-flexclang-design.md  2026-04-21-flexclang-driver-layer.md
examples/: test_kernel.hip  test_kernel_driver.hip  validate.sh
examples/configs/: combined.yaml  disable-memory-clauses.yaml  insert-nop-after-sched.yaml
examples/ir-pass-counter/: CMakeLists.txt  IRInstCounter.cpp
examples/mir-pass-nop-inserter/: CMakeLists.txt  MIRNopInserter.cpp
src/: FlexConfig.cpp  FlexConfig.h  FlexPassConfigCallback.cpp  FlexPassConfigCallback.h  FlexPassLoader.cpp  FlexPassLoader.h  FlexPassNameRegistry.cpp  FlexPassNameRegistry.h  main.cpp
